--- a/front/angular.json
+++ b/front/angular.json
@@ -34,7 +34,11 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+          "./node_modules/@popperjs/core/dist/umd/popper.min.js",
+
+          "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
