--- a/front/angular.json
+++ b/front/angular.json
@@ -38,7 +38,12 @@
           "./node_modules/@popperjs/core/dist/umd/popper.min.js",
 
           "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-            ]
+            ],
+            "stylePreprocessorOptions": {
+              "sass": {
+                "silenceDeprecations": ["mixed-decls", "color-functions", "global-builtin", "import"]
+              }
+            }
           },
           "configurations": {
             "production": {
